# Circuit-Capacity-Calculator

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.html  vcpkg.json
.github/workflows/: build.yml
16ver8/16ver8/: 16ver8.kicad_pcb  16ver8.kicad_prl  16ver8.kicad_pro  16ver8.kicad_sch  16ver8.kicad_sch-bak  Charger_Design.docx  _autosave-16ver3.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
16ver8/16ver8/data_analysis/: opa2392_psrr.csv  opa333_psrr.csv  tps7a20_psrr.csv
16ver8/16ver8/jlcpcb/: project.db
16ver8/16ver8/jlcpcb/gerber/: 16ver8-CuBottom.gbr  16ver8-CuIn1.gbr  16ver8-CuIn2.gbr  16ver8-CuTop.gbr  16ver8-EdgeCuts.gbr  16ver8-MaskBottom.gbr  16ver8-MaskTop.gbr  16ver8-NPTH.drl  16ver8-PTH.drl  16ver8-SilkBottom.gbr  16ver8-SilkTop.gbr
16ver8/16ver8/jlcpcb/production_files/: BOM-16ver6.csv  BOM-16ver7.csv  BOM-16ver8.csv  BOM-retired_joseph.csv  CPL-16ver6.csv  CPL-16ver7.csv  CPL-16ver8.csv
16ver8/16ver8/symbols/2450AT07A0100001T/: 2450AT07A0100001T.kicad_sym
16ver8/16ver8/symbols/2450AT07A0100001T/easyeda2kicad.3dshapes/: ANT-SMD_4P-L1.0-W0.5_2450AT07A0100001T.step  ANT-SMD_4P-L1.0-W0.5_2450AT07A0100001T.wrl
16ver8/16ver8/symbols/2450AT07A0100001T/footprints.pretty/: ANT-SMD_4P-L1.0-W0.5_2450AT07A0100001T.kicad_mod
16ver8/16ver8/symbols/533980271/KiCADv6/: 2025-07-29_00-57-29.kicad_sym
16ver8/16ver8/symbols/ADS8867/: ADS8867.kicad_sym
16ver8/16ver8/symbols/ADS8867/easyeda2kicad.3dshapes/: WSON-10_L3.0-W3.0-H1.0-P0.50.step  WSON-10_L3.0-W3.0-H1.0-P0.50.wrl
16ver8/16ver8/symbols/ADS8867/footprints.pretty/: WSON-10_L3.0-W3.0-P0.50-BL-EP.kicad_mod
16ver8/16ver8/symbols/BLM18EG101TN1D/: BLM18EG101TN1D.kicad_sym
16ver8/16ver8/symbols/BLM18EG101TN1D/footprints.pretty/: BEADC1608X65N.kicad_mod
16ver8/16ver8/symbols/BQ25100/: BQ25100.kicad_sym
16ver8/16ver8/symbols/BQ25100/easyeda2kicad.3dshapes/: DSBGA-6_L0.9-W1.6-H0.5-R2-C3-P0.40-BL.wrl
16ver8/16ver8/symbols/BQ25101/: BQ25101.kicad_sym
16ver8/16ver8/symbols/BQ25101/easyeda2kicad.3dshapes/: DSBGA-6_L0.9-W1.6-H0.5-R2-C3-P0.40-BL.step
16ver8/16ver8/symbols/BQ25101/footprints.pretty/: DSBGA-6_L0.9-W1.6-R2-C3-P0.40-BL.kicad_mod
16ver8/16ver8/symbols/DFE201612E-2R2M=P2/: DFE201612E-2R2M=P2.kicad_sym
16ver8/16ver8/symbols/DFE201612E-2R2M=P2/footprints.pretty/: L0806.kicad_mod
16ver8/16ver8/symbols/ESD9M5.0ST5G/: ESD9M5.0ST5G.kicad_sym
16ver8/16ver8/symbols/ESD9M5.0ST5G/footprints.pretty/: SODFL1060X40N.kicad_mod
16ver8/16ver8/symbols/FPCB 10P/: FPCB_10P.kicad_sym
16ver8/16ver8/symbols/FPCB 10P/easyeda2kicad.3dshapes/: FFC-SMD_10P-P0.50_FH52-10S-0.5SH.step  FFC-SMD_10P-P0.50_FH52-10S-0.5SH.wrl
16ver8/16ver8/symbols/FPCB 10P/footprints.pretty/: FFC-SMD_10P-P0.50_FH52-10S-0.5SH.kicad_mod
16ver8/16ver8/symbols/LM27761DSGT/: LM27761DSGT.kicad_sym
16ver8/16ver8/symbols/LM27761DSGT/easyeda2kicad.3dshapes/: WDFN-8_L2.0-W2.0-H0.8-P0.50.step
16ver8/16ver8/symbols/LM27761DSGT/footprints.pretty/: WFDFN-8_L2.0-W2.0-P0.50-BL-EP.kicad_mod
16ver8/16ver8/symbols/NRF52/: nrf52840_qiaa_layout-altium-import.kicad_sym
16ver8/16ver8/symbols/OPA2333/: IC_DRV8601DRBT.kicad_mod  OPA2333AIDRBR.kicad_sym
16ver8/16ver8/symbols/OPA2333/footprints.pretty/: IC_DRV8601DRBT.kicad_mod
16ver8/16ver8/symbols/OPA2392YBJR/: OPA2392YBJR.kicad_sym
16ver8/16ver8/symbols/OPA320AIDBVT/: OPA320AIDBVT.kicad_sym
16ver8/16ver8/symbols/OPA333AIDBVR/: OPA333AIDBVR.kicad_sym
16ver8/16ver8/symbols/REF3330/: REF3330.kicad_sym
16ver8/16ver8/symbols/SWD_CONN/: SWD_CONN.kicad_sym
16ver8/16ver8/symbols/SZYY1615RGB-B/: SZYY1615RGB_B.kicad_sym
16ver8/16ver8/symbols/TLV2333/: TLV2333IDGKR.kicad_sym
16ver8/16ver8/symbols/TLV9001IDBVR/: TLV9001IDBVR.kicad_sym
16ver8/16ver8/symbols/TLV9062IDGKR/: TLV9062IDGKR.kicad_sym
16ver8/16ver8/symbols/TMUX1104/: TMUX1104.kicad_sym
16ver8/16ver8/symbols/TMUX1108PWR/: TMUX1108PWR.kicad_sym
16ver8/16ver8/symbols/TMUX1248DCKR/: TMUX1248DCKR.kicad_sym
16ver8/16ver8/symbols/TPA6211A1DGNR/: TPA6211A1DGNR.kicad_sym
16ver8/16ver8/symbols/TPS22910/: TPS22910.kicad_sym
16ver8/16ver8/symbols/TPS62840/: TPS62840.kicad_sym
16ver8/16ver8/symbols/TPS62840DLCR/: TPS62840DLCR.kicad_sym
16ver8/16ver8/symbols/TPS7A20/: TPS7A20.kicad_sym
16ver8/16ver8/symbols/TPS7A2033PDBVR/: TPS7A2033PDBVR.kicad_sym
16ver8/16ver8/symbols/TPS7A3001DGNR/: TPS7A3001DGNR.kicad_sym
16ver8/16ver8/symbols/USB_C/: easyeda2kicad.kicad_sym
16ver8/16ver8/symbols/XTAL_2016/: XTAL_2016.kicad_sym
16ver8/16ver8/symbols/XTAL_3215/: XTAL_3215.kicad_sym
16ver8/16ver8/symbols/XTAL_32k/: XTAL_32k.kicad_sym
artifacts/: fastcap_sig_matrix.csv  fastcap_sig_matrix_env_gnd.csv  fastcap_sig_matrix_env_gnd_2mm.csv  fastcap_sig_matrix_env_gnd_gerber_stack.csv  fastcap_sig_matrix_env_gnd_kicad.csv
artifacts/cap/: 16ver8_all_net_caps_invalid.csv  16ver8_all_net_caps_smoke.csv  16ver8_bcu_sig_caps.csv  16ver8_bcu_sig_caps_bicg.csv  program_16ver8_bcu_sig_caps_bicg.csv  program_16ver8_bcu_sig_caps_direct.csv  program_16ver8_bcu_sig_caps_direct_after_holes.csv  program_16ver8_bcu_sig_caps_direct_after_ui.csv
artifacts/fastcap_check/: input.lst  two.qui
src/: CMakeLists.txt  main.cpp
src/core/: Bem.cpp  Bem.cpp.fix  Bem.hpp  CMakeLists.txt  Connectivity.cpp  Connectivity.hpp  FastCapIo.cpp  FastCapIo.hpp  FpcPad.hpp  GlassPlate.hpp  Layer.hpp  Meta.hpp  Model.cpp  Model.hpp  Pad.cpp  Pad.hpp  Trace.hpp  Zone.hpp
src/io/: CMakeLists.txt  ExcellonIo.cpp  ExcellonIo.hpp  GbrJobIo.cpp  GbrJobIo.hpp  GerberIo.cpp  GerberIo.hpp  GerberProject.cpp  GerberProject.hpp  GerberTypes.hpp  GlbIo.cpp  GlbIo.hpp  JsonIo.cpp  JsonIo.hpp  KicadPcbIo.cpp  KicadPcbIo.hpp
src/ui/: CMakeLists.txt  Camera.cpp  Camera.hpp  MainWindow.cpp  MainWindow.cpp.fix  MainWindow.cpp.new  MainWindow.hpp  Viewport3D.cpp  Viewport3D.cpp.fix  Viewport3D.hpp
tests/: CMakeLists.txt  test_fastcap.cpp  test_gerber.cpp  test_jsonio.cpp  test_model.cpp  test_smoke.cpp
tools/: bootstrap.ps1  bootstrap.sh
(+36 files in other folders)
